tester_ft/log/compile_error_vec_16.txt
-VECTOR INSERT POS NUM TEST-

./tmp/outfile_vec_16.cpp:34:38: error: no member named 'begin' in 'ft::vector<int>'
                ft::vector<int>::iterator its = v2.begin() + it_pos;
                                                ~~ ^
./tmp/outfile_vec_16.cpp:36:6: error: no member named 'insert' in 'ft::vector<int>'
                v2.insert(its, (size_t) fill, fill);
                ~~ ^
./tmp/outfile_vec_16.cpp:41:42: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1.begin(),v1.end(),v2.begin()))
                                                    ~~ ^
./tmp/outfile_vec_16.cpp:61:6: error: no member named 'insert' in 'ft::vector<int>'
                v2.insert(v2.begin(), (size_t) 1, 42);
                ~~ ^
./tmp/outfile_vec_16.cpp:61:16: error: no member named 'begin' in 'ft::vector<int>'
                v2.insert(v2.begin(), (size_t) 1, 42);
                          ~~ ^
5 errors generated.
